Knexus ITM TAD Changelog
Produced by Damask Holdings


VERSIONING SCHEME

V KR (Knexus Research) X.Y.Z
X = External entity release
Y = Paralax Release
Z = Internal versioning

V KR 1.2.3 (10/17 changes)
=========================
Changes:
> Monte Carlo Decision Analyzer is no longer calculating casualty severity twice.
> Probe names refactored
> TA3 past action / treatments are refactored out of driver class

=========================
V KR 1.1.3A (oops) (10/10 Internal changes)
=======
Monte Carlo Changes-
> replace score averager with weighted average
> children nodes that are chosen more frequently have a greater affect on the node's score

V KR 1.1.2 (10/7 to Paralax)
=======
Monte Carlo Changes-
> Visualizer implemented
> Nested score propogation implemented

=======
Tinymed Simulator-
> Large overhaul medactions, very generic functions
> Made fixes

=======
Ingestors-
> TA3 converters written

=======
Sumo-
> Medical Oracle excel generated

Misc-
> TA3 States updated to work with kdma rules
> Updated tad_tester to run with new kdma deciders

=======================

V KR.1.0.0 (Sept-Demo)
=======
Monte Carlo Changes-
> Monte Carlo created
> Random + explore/exploit node selectors implemented
> Score averager implemented
> What else did John do?
=======
Tinymed Simulator-
> Simulator created
> Tinymed_enums created
=======
Ingestors-
> TA3 converters written
=======
Sumo-
> Did time tests, sumo work discontinued

=======================
V KR.0.0.0 (MVP)
=======
Monte Carlo Changes-
> Not Present
=======
Tinymed Simulator-
> Not Present
=======
Ingestors-
> Justin did stuff
=======
Sumo-
> Creatd Wumpus rules

'Cause these things will change, Can you feel it now?
These walls that they put up to hold us back will fall down.
This revolution, the time will come, For us to finally win;
And we'll sing hallelujah"

~Taylor Swift, "Change"